tests/ui/bits_too_wide.stderr
error: bits width must be 1..=128
 --> tests/ui/bits_too_wide.rs:5:3
  |
5 |   #[bits(129)]
  |   ^
